--- a/framework/storage/build.gradle
+++ b/framework/storage/build.gradle
@@ -1,51 +1,16 @@
-apply plugin: 'com.android.library'
+apply plugin: 'foundation-module'
 apply plugin: 'realm-android'
-apply plugin: 'kotlin-android'
-apply plugin: "kotlin-android-extensions"
-apply plugin: 'kotlin-kapt'
-apply from: "${rootProject.getRootDir().getAbsolutePath()}/script/testlib.gradle"
-//apply plugin: 'foundation-module'
-android {
-    compileSdkVersion rootProject.ext.compileSdkVersion
-    buildToolsVersion rootProject.ext.buildToolsVersion
+android{
     defaultConfig {
-        minSdkVersion rootProject.ext.minSdkVersion
-        targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode rootProject.ext.versionCode
-        versionName rootProject.ext.versionName
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        javaCompileOptions {
-            annotationProcessorOptions {
-                arguments = [
-                        "room.schemaLocation":"$projectDir/schemas".toString(),
-                        "room.incremental":"true",
-                        "room.expandProjection":"true"]
-            }
-        }
-    }
-
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
-
-        component {
-            initWith debug
-            debuggable true
-        }
-    }
-    sourceSets {
-        main.java.srcDirs += ["src/main/kotlin"]
+        javaCompileOptions.annotationProcessorOptions.arguments = [
+                "room.schemaLocation"  : "$projectDir/schemas".toString(),
+                "room.incremental"     : "true",
+                "room.expandProjection": "true"
+        ]
     }
 
 }
-
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    api project(path: ':framework:common')
-
     /**
      * ================================database start==============================
      */
