--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -35,7 +35,9 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation gradleApi()
     implementation localGroovy()
+    //implementation "com.android.tools.build:gradle:7.1.0-alpha01" //升级会有很多问题
     implementation "com.android.tools.build:gradle:3.5.4"
+    implementation "org.jetbrains.kotlin:kotlin-gradle-plugin:1.4.31"
     implementation files('libs/buglySymbolAndroid.jar')
 //    implementation "org.javassist:javassist:3.20.0-GA"
 //    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.50"
