--- a/framework/chatroom/build.gradle
+++ b/framework/chatroom/build.gradle
@@ -1,38 +1,6 @@
-apply plugin: 'com.android.library'
-apply from: "${rootProject.getRootDir().getAbsolutePath()}/script/testlib.gradle"
+apply plugin: 'foundation-module'
 
-
-android {
-    compileSdkVersion rootProject.ext.compileSdkVersion
-    buildToolsVersion rootProject.ext.buildToolsVersion
-    defaultConfig {
-        minSdkVersion rootProject.ext.minSdkVersion
-        targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode rootProject.ext.versionCode
-        versionName rootProject.ext.versionName
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-
-    }
-
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
-        component {
-            initWith debug
-            debuggable true
-        }
-    }
-    sourceSets {
-        component {
-            java.srcDirs = ['src/component/java']
-        }
-    }
-}
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-
-    api project(path: ':framework:common')
+    implementation project(path: ':framework::common')
 }
