--- a/framework/image/build.gradle
+++ b/framework/image/build.gradle
@@ -1,12 +1,4 @@
-apply from: "${rootProject.getRootDir().getAbsolutePath()}/script/console.gradle"
-printInfo("==>>>>>>>>>>>>>>>>image start")
-apply plugin: 'com.android.library'
-apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-kapt'
-apply plugin: 'kotlin-android-extensions'
-apply from: "${rootProject.getRootDir().getAbsolutePath()}/script/testlib.gradle"
-
-def srcDirs = [
+ext.srcDirs = [
         "gif",
 //        "video",
 //        "colorpicker",
@@ -16,16 +8,11 @@ def srcDirs = [
 //        "scrollExprimental",
 
 ]
-android {
-    compileSdkVersion rootProject.ext.compileSdkVersion
-    buildToolsVersion rootProject.ext.buildToolsVersion
-    defaultConfig {
-        minSdkVersion rootProject.ext.minSdkVersion
-        targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode rootProject.ext.versionCode
-        versionName rootProject.ext.versionName
+apply plugin: 'foundation-module'
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+android {
+    defaultConfig {
         externalNativeBuild {
             cmake {
                 arguments "-DANDROID_ARM_NEON=TRUE", "-DANDROID_TOOLCHAIN=clang"
@@ -44,54 +31,17 @@ android {
             //path 'src/main/cpp/CMakeLists.txt'
         }
     }
-
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-    }
-    sourceSets {
-        main {
-            java.excludes = [
-                    '**/build/**',
-            ]
-            srcDirs.forEach {
-                assets.srcDirs += "$projectDir/$it/main/assets"
-                aidl.srcDirs += "$projectDir/$it/main/aidl"
-                res.srcDirs += "$projectDir/$it/main/res"
-                java.srcDirs += "$projectDir/$it/main/java"
-            }
-        }
-        androidTest {
-            srcDirs.forEach {
-                assets.srcDirs += "$projectDir/$it/androidTest/assets"
-                aidl.srcDirs += "$projectDir/$it/androidTest/aidl"
-                res.srcDirs += "$projectDir/$it/androidTest/res"
-                java.srcDirs += "$projectDir/$it/androidTest/java"
-            }
-        }
-        test {
-            srcDirs.forEach {
-                java.srcDirs += "$projectDir/$it/test/java"
-            }
-
-        }
-    }
-
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
     api project(path: ':framework:common')
-
     /**
      * ===============================image start=============================
      */
     api 'com.github.bumptech.glide:glide:4.11.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+    kapt 'com.github.bumptech.glide:compiler:4.11.0'
 //    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
-    api 'androidx.exifinterface:exifinterface:1.1.0'
+    api 'androidx.exifinterface:exifinterface:1.3.2'
     api 'com.github.bumptech.glide:recyclerview-integration:4.11.0'
 
     api 'com.facebook.fresco:fresco:2.0.0'
@@ -104,8 +54,5 @@ dependencies {
     /**
      * ===============================image end=============================
      */
-
-
 }
-//printInfo("==>>>>>>>>>>>>>>>>image end")
 
