--- a/framework/loader/build.gradle
+++ b/framework/loader/build.gradle
@@ -1,33 +1,6 @@
-apply from: "${rootProject.getRootDir().getAbsolutePath()}/script/console.gradle"
-apply plugin: 'com.android.library'
-apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-kapt'
-apply plugin: 'kotlin-android-extensions'
-apply from: "${rootProject.getRootDir().getAbsolutePath()}/script/testlib.gradle"
-
-android {
-    compileSdkVersion rootProject.ext.compileSdkVersion
-    buildToolsVersion rootProject.ext.buildToolsVersion
-    defaultConfig {
-        minSdkVersion rootProject.ext.minSdkVersion
-        targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode rootProject.ext.versionCode
-        versionName rootProject.ext.versionName
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-
-    }
-
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-    }
-}
+apply plugin: 'foundation-module'
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
     api project(path: ':framework:uicomponent')
 //    api project(path: ':framework:map')
     api project(path: ':framework:av')
@@ -37,8 +10,6 @@ dependencies {
     api project(path: ':framework:image')
     api project(path: ':framework:flutter')
     api project(path: ':framework:router')
-    kapt "com.google.dagger:dagger-compiler:2.16"
-    kapt "com.google.dagger:dagger-android-processor:2.16"
 
     api 'com.google.firebase:firebase-analytics:17.4.0'
     api 'com.google.firebase:firebase-crashlytics:17.0.0'
