--- a/framework/storage/build.gradle
+++ b/framework/storage/build.gradle
@@ -11,6 +11,7 @@ android{
 
 }
 dependencies {
+    implementation project(path: ':framework:common')
     /**
      * ================================database start==============================
      */
