--- a/components/login/build.gradle
+++ b/components/login/build.gradle
@@ -1,14 +1,20 @@
 apply plugin: 'bundle-module'
-android {
-    defaultConfig{
-        buildConfigField('String', 'BASE_URL', '" https://www.easy-mock.com/mock/5ce10c941e436e14aceef040/"')
-    }
-}
 kapt {
     arguments {
         arg("AROUTER_MODULE_NAME", project.getName())
     }
 }
+android {
+    defaultConfig{
+        buildConfigField('String', 'BASE_URL', '" https://www.easy-mock.com/mock/5ce10c941e436e14aceef040/"')
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = [AROUTER_MODULE_NAME: project.getName(), AROUTER_GENERATE_DOC: "enable"]
+            }
+        }
+    }
+}
+
 dependencies {
     implementation 'com.google.firebase:firebase-auth:21.0.1'
 }
