--- a/components/myhome/build.gradle
+++ b/components/myhome/build.gradle
@@ -32,7 +32,7 @@ android {
 }
 apply from: "${rootProject.getRootDir().getAbsolutePath()}/script/check_dangerous_api.gradle"
 checker {
-    filters = ['SafeConvert']
+//    filters = ['SafeConvert.java']
     dangerousApis = [
             "Color.parseColor",
             "Integer.valueOf",
