--- a/build.gradle
+++ b/build.gradle
@@ -58,7 +58,7 @@ buildscript {
         //3.混淆处理：缩短类和成员的名称，从而减小 DEX 文件的大小。如需了解详情，请转到介绍如何对代码进行混淆处理的部分。
         //4.优化：检查并重写代码，以进一步减小应用的 DEX 文件的大小。例如，如果 R8 检测到从未采用过给定 if/else 语句的 else {} 分支，则会移除 else {} 分支的代码。如需了解详情，请转到介绍代码优化的部分。
         classpath "com.android.tools.build:gradle:7.1.0-alpha01"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.4.31"
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.10'
 //        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.60-eap-25"
         classpath "org.jetbrains.kotlin:kotlin-serialization:1.3.70"
         classpath "io.realm:realm-gradle-plugin:5.7.0"
@@ -73,6 +73,7 @@ buildscript {
         classpath("com.tencent.matrix:matrix-gradle-plugin:0.6.0") { changing = true }
         classpath 'com.google.firebase:firebase-appdistribution-gradle:2.0.0'
         classpath "com.alibaba:arouter-register:1.0.2"
+//        classpath "com.uber:infer-plugin:0.7.4"
     }
 }
 
