--- a/app/build.gradle
+++ b/app/build.gradle
@@ -148,10 +148,14 @@ android {
             }
         }
     }
-    lintOptions {
-        checkReleaseBuilds false
-        abortOnError false
-    }
+//    lintOptions {
+//        checkReleaseBuilds false
+//        abortOnError false
+////        textReport true
+////        // Produce report for CI:
+////        // https://docs.github.com/en/github/finding-security-vulnerabilities-and-errors-in-your-code/sarif-support-for-code-scanning
+////        sarifOutput project.file("$project.rootDir/lint-results.sarif")
+//    }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
