--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ buildscript {
         maven { url "https://maven.aliyun.com/repository/jcenter" }
         maven { url 'https://plugins.gradle.org/m2/' }
         mavenLocal()
-        jcenter()
+        mavenCentral()
         maven { url uri("$rootDir/repo")}
     }
     ext {
@@ -63,15 +63,15 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-serialization:1.3.70"
         classpath "io.realm:realm-gradle-plugin:5.7.0"
 //        classpath "com.google.protobuf:protobuf-gradle-plugin:0.8.8"
-        classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:1.0.0"
+//        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.3.5"
 
         classpath 'com.google.gms:google-services:4.3.3'
-        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.0.0'
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.5.2'
         classpath 'com.google.firebase:perf-plugin:1.3.1'
 //        classpath 'com.hawksjamesf.plugin:perf:1.0.0'
 //        classpath 'com.google.firebase:firebase-plugins:1.1.5'
         classpath("com.tencent.matrix:matrix-gradle-plugin:0.6.0") { changing = true }
-        classpath 'com.google.firebase:firebase-appdistribution-gradle:2.0.0'
+        classpath 'com.google.firebase:firebase-appdistribution-gradle:2.1.2'
         classpath "com.alibaba:arouter-register:1.0.2"
 //        classpath "com.uber:infer-plugin:0.7.4"
     }
@@ -84,7 +84,7 @@ allprojects {
         maven { url "https://maven.aliyun.com/repository/jcenter" }
         maven { url 'https://plugins.gradle.org/m2/' }
         mavenLocal()
-        jcenter()
+        mavenCentral()
         maven { url uri("$rootDir/repo")}
     }
 
