--- a/lint-rules/build.gradle
+++ b/lint-rules/build.gradle
@@ -13,17 +13,23 @@ plugins {
 
 dependencies {
     // so many stdlib to choose from!
-//    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.5.10"
-    compileOnly "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.5.0"
 //    implementation("org.jetbrains.kotlin:kotlin-stdlib-jre8")
 //    implementation("org.jetbrains.kotlin:kotlin-stdlib-jre7")
 //    implementation("org.jetbrains.kotlin:kotlin-stdlib")
 //    implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
-//    implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk7")
+    compileOnly "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.5.0"
+    compileOnly "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.5.0"
 //    compileOnly "com.android.tools.lint:lint::27.2.1"
-    compileOnly "com.android.tools.lint:lint-api:27.2.1"
-    compileOnly "com.android.tools.lint:lint-checks:27.2.1"
-    testImplementation "com.android.tools.lint:lint-tests:27.2.1"
+    ////         Current lint target: Studio 4.2 / AGP 7
+    //        gradlePluginVersion = '4.2.0-beta05'
+    //        lintVersion = '27.2.0-beta05'
+    //
+    //        // Upcoming lint target: Arctic Fox / AGP 7
+    //        gradlePluginVersion = '7.0.0-alpha10'
+    //        lintVersion = '30.0.0-alpha10' // if gradle plugin was 4.1.2, you'd use 27.1.2 here
+    compileOnly "com.android.tools.lint:lint-api:30.0.0-alpha10"
+    compileOnly "com.android.tools.lint:lint-checks:30.0.0-alpha10"
+    testImplementation "com.android.tools.lint:lint-tests:30.0.0-alpha10"
 }
 sourceCompatibility = "1.8"
 targetCompatibility = "1.8"
