--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,16 +85,6 @@ android {
                 'BUGLY_APP_ID': '3d62251014', 'BUGLY_APP_KEY': 'a15ecf84-1786-40c6-abf5-fe975fce22e6', "BUGLY_APP_VERSION": "${rootProject.ext.versionName}",
                 'AMAP_KEY'    : '84198333a8ab4404cd35829dbb4ec435',
         ]
-
-        //lower 5.x
-//        vectorDrawables.useSupportLibrary = true
-//        vectorDrawables.generatedDensities = []
-        externalNativeBuild {
-            cmake {
-                cppFlags "-std=c++14"
-                abiFilters "arm64-v8a", "armeabi-v7a"/*,"x86","x86_64"*/
-            }
-        }
     }
     signingConfigs {
         debugSigningConfig {
@@ -149,28 +139,47 @@ android {
         }
     }
     lintOptions {
-        checkReleaseBuilds false
+        lintConfig project.file("$project.rootDir/lint.xml")
+        htmlReport true
+        htmlOutput project.file("$project.rootDir/lint-report-app.html")
+        xmlReport true
+        xmlOutput project.file("$project.rootDir/lint-report-app.xml")
+        warningsAsErrors true
         abortOnError false
-////        textReport true
-////        // Produce report for CI:
-////        // https://docs.github.com/en/github/finding-security-vulnerabilities-and-errors-in-your-code/sarif-support-for-code-scanning
-////        sarifOutput project.file("$project.rootDir/lint-results.sarif")
+        checkReleaseBuilds false
+        //        textReport true
+//        // Produce report for CI:
+//        // https://docs.github.com/en/github/finding-security-vulnerabilities-and-errors-in-your-code/sarif-support-for-code-scanning
+//        sarifOutput project.file("$project.rootDir/lint-results.sarif")
+//                // Turns off checks for the issue IDs you specify.
+//                disable 'TypographyFractions','TypographyQuotes'
+//                // Turns on checks for the issue IDs you specify. These checks are in
+//                // addition to the default lint checks.
+//                enable 'RtlHardcoded','RtlCompat', 'RtlEnabled'
+//                // To enable checks for only a subset of issue IDs and ignore all others,
+//                // list the issue IDs with the 'check' property instead. This property overrides
+//                // any issue IDs you enable or disable using the properties above.
+//                checkOnly 'NewApi', 'InlinedApi'
+//                // If set to true, turns off analysis progress reporting by lint.
+//                quiet true
+//                // if set to true (default), stops the build if errors are found.
+//                abortOnError false
+//                // if true, only report errors.
+//                ignoreWarnings true
     }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-    kotlinOptions {
-        jvmTarget = "1.8"
-    }
+
     //    buildFeatures {
 //        viewBinding true
 //    }
+    //    buildFeatures {
+//        dataBinding true
+//    }
+
     splits {
         abi {
             enable true
             reset()
-            include 'armeabi-v7a', "arm64-v8a", 'armeabi','x86'
+            include 'armeabi-v7a', "arm64-v8a", 'armeabi', 'x86'
 //            exclude "x86","x86_64"
             universalApk false
         }
@@ -235,10 +244,6 @@ android {
     packagingOptions {
         exclude 'META-INF/proguard/coroutines.pro'
     }
-//    buildFeatures {
-//        dataBinding true
-//    }
-
     applicationVariants.all { variant ->
         if (variant.name.equalsIgnoreCase("debug")) {
 //            packageDebug.doLast {
