--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -38,11 +38,11 @@ dependencies {
     implementation "com.android.tools.build:gradle:7.1.0-alpha01" //升级会有很多问题
 //    implementation "com.android.tools.build:gradle:3.5.4"
     implementation "org.jetbrains.kotlin:kotlin-gradle-plugin:1.4.31"
+//    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.50"
     implementation files('libs/buglySymbolAndroid.jar')
 //    implementation "org.javassist:javassist:3.20.0-GA"
-//    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.50"
-//    implementation group: 'org.ow2.asm', name: 'asm', version: '5.1'
-//    implementation group: 'org.ow2.asm', name: 'asm-commons', version: '5.1'
+    implementation group: 'org.ow2.asm', name: 'asm', version: '5.1'
+    implementation group: 'org.ow2.asm', name: 'asm-commons', version: '5.1'
 }
 tasks.withType(GroovyCompile) {
     sourceCompatibility = '1.8'
