--- a/lint-checker/build.gradle
+++ b/lint-checker/build.gradle
@@ -8,5 +8,11 @@ android {
 }
 /** Package the given lint checks library into this AAR  */
 dependencies {
+    // Executes lint checks from the ':checks' project
+    // at build time.
+//    lintChecks project(':lint-rules')
+    // Compiles lint checks from the ':checks-to-publish'
+    // into a lint.jar file and publishes it to your
+    // Android library.
     lintPublish project(path: ':lint-rules')
 }
