add module lint

--- a/components/hotel-module/foundation/build.gradle
+++ b/components/hotel-module/foundation/build.gradle
@@ -21,3 +21,7 @@ android {
 //        }
 //    }
 }
+dependencies {
+    lintChecks project(path: ':components:hotel-module:hotel-lint')
+    lintPublish project(path: ':components:hotel-module:hotel-lint')
+}
