--- a/app/build.gradle
+++ b/app/build.gradle
@@ -312,6 +312,8 @@ dependencies {
         implementation project(path: ':components:myhome')
         implementation project(path: ':components:login')
     }
+    implementation project(path: ':components:hotel-module:bundle1')
+    implementation project(path: ':components:hotel-module:bundle2')
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 //    apkCheckerDependency group: "com.tencent.matrix", name: "matrix-apk-canary", version: "0.6.0", changing: true
 }
