--- a/app/build.gradle
+++ b/app/build.gradle
@@ -304,17 +304,16 @@ configurations {
 //}
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    if (isHaHa.toBoolean()) {
-        implementation project(path: ':components:template')
-//        implementation project(path: ':components:module1')
-
-    } else {
-        implementation project(path: ':components:myhome')
-        implementation project(path: ':components:login')
+    println "[implementation bundles] begin ========================================================================================"
+    gradle.ext.allModules.each { module ->
+        if (module.type == 'bundle') {
+            println("[implementation bundles] ${module.module}")
+            //implementation 源码 or aar文件
+            implementation project(path: module.module)
+        }
     }
-    implementation project(path: ':components:hotel-module:bundle1')
-    implementation project(path: ':components:hotel-module:bundle2')
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    println "[implementation bundles] end ========================================================================================"
+
 //    apkCheckerDependency group: "com.tencent.matrix", name: "matrix-apk-canary", version: "0.6.0", changing: true
 }
 //buildDir = new File(rootProject.projectDir, "../build/host")
